--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
-<html>
-  <head>
-      <title>Dallas County Covid-19 Tracker</title>
-  </head>
+<html> 
+	<head>
+	<title>Dallas County COVID-19 Statistics Tracker</title>
+	<link rel='stylesheet' type='text/css' href='./style.css'>
+	<link href="https://fonts.googleapis.com/css?family=Archivo&display=swap" rel="stylesheet">
+	</head>
+	<b>
+		<div class='titlebar'>
+			<p>
+				<h1>Dallas County COVID-19 Cases</h1>
+			<p>
+		</div>
+		<div class='mainbody'>
+			<p>
+			<img src = "./covidgraph.png">
+			</p>
+			<p>
+			Page under construction
+			</p>
+		</div>
+	</b>
 </html>
