--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 	<link rel='stylesheet' type='text/css' href='./style.css'>
 	<link href="https://fonts.googleapis.com/css?family=Archivo&display=swap" rel="stylesheet">
 	</head>
-	<b>
+	<body>
 		<div class='titlebar'>
-			<p>
-				<h1>Dallas County COVID-19 Cases</h1>
-			<p>
+				Dallas County COVID-19 Cases
 		</div>
 		<div class='mainbody'>
 			<p>
-			<img src = "./covidgraph.png">
+				<img src = "./covidgraph.png">
 			</p>
-			<p>
-			Page under construction
+			<p class='footer'>
+				Data is taken daily from official Dallas County statistics published online, typically between 10AM and 1PM. For more detailed information, visit <a href='https://www.dallascounty.org/covid-19'>https://www.dallascounty.org/covid-19/</a>. To download the raw data used in this graph, click <a href='https://covid19.taylorcowin.com/CovidList.csv'>here</a>.
+			</p>
+			<p class='footer'>
+				This website is not affiliated with Dallas County. 
 			</p>
 		</div>
-	</b>
+	</body>
 </html>
