--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<img src = "./covidgraph.png">
 			</p>
 			<p class='footer'>
-				Data is taken daily from official Dallas County statistics published online, typically between 10AM and 1PM. For more detailed information, visit <a href='https://www.dallascounty.org/covid-19'>https://www.dallascounty.org/covid-19/</a>. To download the raw data used in this graph, click <a href='https://covid19.taylorcowin.com/CovidList.csv'>here</a>.
+				Data taken daily from official Dallas County statistics published online, typically between 10AM and 1PM. For more detailed information, visit <a href='https://www.dallascounty.org/covid-19'>https://www.dallascounty.org/covid-19/</a>. To download the raw data used in this graph, click <a href='https://covid19.taylorcowin.com/CovidList.csv'>here</a>.
 			</p>
 			<p class='footer'>
 				This website is not affiliated with Dallas County. 
